
2017-07-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: added constant-folding option

2017-07-02  Ron Norman <rjn@inglenet.com>

	* mf.conf: corrected to have synchronized-clause: ignore

2017-06-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: created a "strict" set of vendor dialect configurations,
	  laxed "normal" vendor dialect configurations by allowing *all*
	  words GnuCOBOL can handle *additional* to the not-implemented
	  vendor specific extensions and by allowing use of most features
	  Note: COBOL85, COBOL2002 and COBOL2014 are always "strict"

2017-06-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: moved reserved words list from conf files to seperate files,
	  replaced "specify-all-reserved" option by "reserved-words"
	  (special include file)

2017-06-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: renamed "debugging-line" option to "debugging-mode"

2017-06-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: added define-constant-directive option

2017-06-05  Edward Hart <edward.dan.hart@gmail.com>

	* general: added incorrect-conf-sec-order option

2017-06-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: renamed eject-statement to listing-statements,
	  added title-statement

2017-06-04  Edward Hart <edward.dan.hart@gmail.com>

	* rm.conf: added config file for RM-COBOL

2017-05-22  Ron Norman <rjn@inglenet.com>

	* mf.conf: corrected to have pretty-display: yes

2017-05-13  Edward Hart <edward.dan.hart@gmail.com>

	* general: added numeric-value-for-edited-item

2017-04-26  Ron Norman <rjn@inglenet.com>

	* general: added 'constant-78' to indicate if 78 is allowed and
	  'constant-01' to indicate if 01 CONSTANT is allowed

2017-04-22  Edward Hart <edward.dan.hart@gmail.com>

	* general: added stop-identifier config option

2016-12-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
