@@ -219,7 +219,7 @@ CB_CONFIG_SUPPORT (cb_national_literals, "national-literals",
 CB_CONFIG_SUPPORT (cb_national_hex_literals, "hexadecimal-national-literals",
 	_("hexadecimal-national literals (NX'265E')"))
 
-CB_CONFIG_SUPPORT (cb_acucobol_literals, "acucobol-literals",
+CB_CONFIG_SUPPORT (cb_acu_literals, "acu-literals",
 	_("ACUCOBOL-GT literals (#B #O #H #X)"))
 
 CB_CONFIG_SUPPORT (cb_word_continuation, "word-continuation",
