@@ -177,7 +177,7 @@ numeric-boolean:			unconformable
 hexadecimal-boolean:			unconformable
 national-literals:			unconformable
 hexadecimal-national-literals:		unconformable
-acucobol-literals:			unconformable
+acu-literals:			unconformable
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
