@@ -176,7 +176,7 @@ numeric-boolean:			ok
 hexadecimal-boolean:			ok
 national-literals:			ok
 hexadecimal-national-literals:		ok
-acucobol-literals:			unconformable
+acu-literals:			unconformable
 word-continuation:			archaic
 not-exception-before-exception:		ok
 accept-display-extensions:		unconformable
