@@ -179,7 +179,7 @@ numeric-boolean:			ok			# this can be changed by the BINLINT directive (default 
 hexadecimal-boolean:		unconformable
 national-literals:			ok
 hexadecimal-national-literals:		ok
-acucobol-literals:			ok
+acu-literals:			ok
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
