@@ -183,7 +183,7 @@ numeric-boolean:			unconformable
 hexadecimal-boolean:			unconformable
 national-literals:			unconformable
 hexadecimal-national-literals:		unconformable
-acucobol-literals:			unconformable  # TO-DO: Add config option for H"..."
+acu-literals:			unconformable  # TO-DO: Add config option for H"..."
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
